[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "xunko"
version = "0.0.1"
authors = [{name = "Enrique Boquete Someso", email = "enriqueboquete02@gmail.com"}]
description = "From scratch BPE tokenizer."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }
keywords = ["AI", "Machine learning", "Tokenizer", "Token", "Byte Pair Encoding", "BPE"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/EBoquete02/XunkO/tree/main"
DOWNLOAD = "https://github.com/EBoquete02/XunkO.git"